--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ resources/tablet/native/androidtab/values/widgetids.xml
 
 # NPM dependencies folder when for apps using Cordova. Apparently only needed when not using a global Cordova installation.
 node_modules
+
+# Cordova plugins and platforms directories can be ignored as with any Cordova project.
+web/cordova/plugins
+#web/cordova/platforms
